# sudopwd

./: meson.build
debian/: changelog  control  copyright
po/: POTFILES.in
src/: meson.build  sudopwd.c  sudopwd.gresource.xml  sudopwd.ui
